2002-05-03  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>

	* configure.in: Update local install.html, configopts.html paths.
	* configure: Regenerate.

2002-05-02  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* config/os/irix/irix5.2/bits/os_defines.h
	(__glibcpp_long_double_bits, __glibcpp_long_bits): Define.

	* config/os/irix/irix5.2/bits/ctype_inline.h: Cast to unsigned
	char.

2002-05-02  Phil Edwards  <pme@gcc.gnu.org>

	* docs/html/faq/index.html:  Update list in #4.1.
	* docs/html/faq/index.txt:  Regenerated.

2002-05-02  Benjamin Kosnik  <bkoz@redhat.com>

	* docs/html/17_intro/RELEASE-NOTES (New): Update.

2002-05-01  Phil Edwards  <pme@gcc.gnu.org>

	* include/std/std_bitset.h:  Fix doxygen comments.
	* docs/html/documentation.html:  Minor tweaks for 3.1.
	* docs/html/27_io/howto.html:  Likewise.
	* docs/html/ext/howto.html:  Likewise, mention stdio_filebuf.
	* docs/html/faq/index.html:  Likewise.
	* docs/html/faq/index.txt:  Regenerated.

2002-05-01  Benjamin Kosnik  <bkoz@redhat.com>

	PR libstdc++/6533
	* include/bits/streambuf_iterator.h (istreambuf_iterator::_M_get): New.
	(istreambuf_iterator::equal): Use it.
	(istreambuf_iterator::operator*): Use it.	

2002-05-01  Paolo Carlini  <pcarlini@unitus.it>

	PR libstdc++/6513
	* include/bits/stl_uninitialized.h
	(uninitialized_copy(_InputIter, _InputIter, _ForwardIter)):
	Fix typo in 2001-07-17 commit: typedef _ValueType to
	iterator_traits<_ForwardIter> not <_InputIter>.
	* testsuite/23_containers/vector_ctor.cc: Add test04.

2002-04-30  John David Anglin  <dave@hiauly1.hia.nrc.ca>
	
	PR libstdc++/6501
	* include/c_std/std_cctype.h: Include bits/c++config.h.
	* config/os/hpux/bits/os_defines.h (_SB_CTYPE_MACROS): Define.

2002-04-30  Benjamin Kosnik  <bkoz@redhat.com>

	* include/ext/stdio_filebuf.h: New file.
	* include/ext/enc_filebuf.h: New file.	
	* config/io/basic_file_stdio.h (__basic_file::sys_open): Add fd ctor.
	* config/io/basic_file_stdio.cc: Same.	